# medleys-love-notes-automation

./: .dockerignore  .editorconfig  .editorconfig-checker.json  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  README.md  prettier.config.js  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  post-create
.github/workflows/: ci.yml
scripts/: build  clean  format  lint  test
src/mlna/: api.py  cli.py  parts.py  sheets.py  slack.py  when2meet.py
src/mlna/data/templates/: index.html
src/mlna/mock/: utils.py  when2meet.py
src/mlna/mock/data/: when2meet.csv
tests/: test_mock_when2meet.py  test_when2meet.py
